--- a/styles.css
+++ b/styles.css
@@ -245,14 +245,14 @@ h1 {
 
 .image-container {
     width: 100%;
-    height: 400px; /* Adjust this value as needed */
+    height: 300px; /* Adjust this value as needed */
     overflow: hidden;
   }
   
   .project-image {
     width: 100%;
-    height: 100%;
-    object-fit: contain;
+    height: 400px;
+    object-fit: fill;
     object-position: center;
   }
 
