--- a/styles.css
+++ b/styles.css
@@ -356,14 +356,18 @@ h1 {
   .brand-section {
     background-color: #cb0404;
     width: 100%;
-    height: 400px;
+    height: 250px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
    
   }
   
   .brand-section img {
     width: 100%;
-    padding: 3%;
-    padding-top: 12%;
+    padding-left: 2%;
+    padding-right: 2%;
+   
     
   }
   
